--- a/JAS.ChartJs.Blazor/BlazorChartJsWrapper.Demo/BlazorChartJsWrapper.Demo.csproj
+++ b/JAS.ChartJs.Blazor/BlazorChartJsWrapper.Demo/BlazorChartJsWrapper.Demo.csproj
@@ -6,4 +6,14 @@
     <ImplicitUsings>enable</ImplicitUsings>
   </PropertyGroup>
 
+  <ItemGroup>
+    <ProjectReference Include="..\ChartJsWrapper\ChartJsWrapper.csproj" />
+  </ItemGroup>
+
+  <ItemGroup>
+    <Reference Include="ChartJsWrapper">
+      <HintPath>..\ChartJsWrapper\bin\Debug\net7.0\ChartJsWrapper.dll</HintPath>
+    </Reference>
+  </ItemGroup>
+
 </Project>
