--- a/JAS.ChartJs.Blazor/ChartJsWrapper/ChartJsWrapper.csproj
+++ b/JAS.ChartJs.Blazor/ChartJsWrapper/ChartJsWrapper.csproj
@@ -13,6 +13,7 @@
 
   <ItemGroup>
     <PackageReference Include="Microsoft.AspNetCore.Components.Web" Version="7.0.2" />
+    <PackageReference Include="Newtonsoft.Json" Version="13.0.4" />
   </ItemGroup>
 
 </Project>
